--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "ols test",
     "test:coverage": "ols test --coverage"
   },
+  "files": [
+    "dist"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
